--- a/GeneralAlgebraTeamLabProject/GUI/mainwindow.ui
+++ b/GeneralAlgebraTeamLabProject/GUI/mainwindow.ui
@@ -42,7 +42,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton_3">
+     <widget class="QPushButton" name="pushButton_PolynomialField">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
         <horstretch>0</horstretch>
