--- a/GeneralAlgebraTeamLabProject/GUI/mainwindow.ui
+++ b/GeneralAlgebraTeamLabProject/GUI/mainwindow.ui
@@ -10,6 +10,11 @@
     <height>600</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>14</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
