--- a/GeneralAlgebraTeamLabProject/GUI/finitefieldwindow.ui
+++ b/GeneralAlgebraTeamLabProject/GUI/finitefieldwindow.ui
@@ -95,17 +95,10 @@
          <property name="leftMargin">
           <number>0</number>
          </property>
-         <item row="3" column="0">
-          <widget class="QPushButton" name="pushButton_factorization_naive">
+         <item row="7" column="0">
+          <widget class="QPushButton" name="pushButton_9">
            <property name="text">
-            <string>Розкласти на множники (наївний алоритм)</string>
-           </property>
-          </widget>
-         </item>
-         <item row="5" column="0">
-          <widget class="QPushButton" name="pushButton_sqrt">
-           <property name="text">
-            <string>Квадратний корінь</string>
+            <string> Порядок елемента групи</string>
            </property>
           </widget>
          </item>
@@ -116,24 +109,20 @@
            </property>
           </widget>
          </item>
-         <item row="8" column="0">
-          <widget class="QPushButton" name="pushButton_10">
+         <item row="1" column="1">
+          <widget class="QLineEdit" name="lineEdit_second"/>
+         </item>
+         <item row="2" column="0">
+          <widget class="QPushButton" name="pushButton_reverse">
            <property name="text">
-            <string>Чи є елемент генератором мультиплікативної групи поля</string>
+            <string>Знайти обернений</string>
            </property>
           </widget>
          </item>
-         <item row="7" column="0">
-          <widget class="QPushButton" name="pushButton_9">
+         <item row="3" column="1">
+          <widget class="QPushButton" name="pushButton_substract">
            <property name="text">
-            <string> Порядок елемента групи</string>
-           </property>
-          </widget>
-         </item>
-         <item row="9" column="0">
-          <widget class="QPushButton" name="pushButton_11">
-           <property name="text">
-            <string>Функція Ейлера</string>
+            <string>Відняти</string>
            </property>
           </widget>
          </item>
@@ -147,34 +136,10 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="1">
-          <widget class="QLineEdit" name="lineEdit_second"/>
-         </item>
-         <item row="6" column="0">
-          <widget class="QPushButton" name="pushButton_log">
+         <item row="9" column="0">
+          <widget class="QPushButton" name="pushButton_11">
            <property name="text">
-            <string>Дискретний логарифм</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="0">
-          <widget class="QPushButton" name="pushButton_reverse">
-           <property name="text">
-            <string>Знайти обернений</string>
-           </property>
-          </widget>
-         </item>
-         <item row="10" column="0">
-          <widget class="QPushButton" name="pushButton_12">
-           <property name="text">
-            <string>Функція Кармайкла</string>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="1">
-          <widget class="QPushButton" name="pushButton_substract">
-           <property name="text">
-            <string>Відняти</string>
+            <string>Функція Ейлера</string>
            </property>
           </widget>
          </item>
@@ -185,17 +150,59 @@
            </property>
           </widget>
          </item>
-         <item row="4" column="1">
+         <item row="8" column="0">
+          <widget class="QPushButton" name="pushButton_10">
+           <property name="text">
+            <string>Чи є елемент генератором мультиплікативної групи поля</string>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="0">
+          <widget class="QPushButton" name="pushButton_log">
+           <property name="text">
+            <string>Дискретний логарифм</string>
+           </property>
+          </widget>
+         </item>
+         <item row="10" column="0">
+          <widget class="QPushButton" name="pushButton_12">
+           <property name="text">
+            <string>Функція Кармайкла</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="0">
+          <widget class="QPushButton" name="pushButton_factorization_naive">
+           <property name="text">
+            <string>Розкласти на множники (наївний алгоритм)</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="0">
+          <widget class="QPushButton" name="pushButton_sqrt">
+           <property name="text">
+            <string>Квадратний корінь</string>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="1">
+          <widget class="QPushButton" name="pushButton_divide">
+           <property name="text">
+            <string>Поділити</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="1">
           <widget class="QPushButton" name="pushButton_pow">
            <property name="text">
             <string>Піднести у степінь</string>
            </property>
           </widget>
          </item>
-         <item row="5" column="1">
-          <widget class="QPushButton" name="pushButton_divide">
+         <item row="4" column="1">
+          <widget class="QPushButton" name="pushButton_multiply">
            <property name="text">
-            <string>Поділити</string>
+            <string>Помножити</string>
            </property>
           </widget>
          </item>
