--- a/GeneralAlgebraTeamLabProject/GUI/finitefieldwindow.ui
+++ b/GeneralAlgebraTeamLabProject/GUI/finitefieldwindow.ui
@@ -137,7 +137,7 @@
           </widget>
          </item>
          <item row="9" column="0">
-          <widget class="QPushButton" name="pushButton_11">
+          <widget class="QPushButton" name="pushButton_euler">
            <property name="text">
             <string>Функція Ейлера</string>
            </property>
@@ -166,7 +166,7 @@
           </widget>
          </item>
          <item row="10" column="0">
-          <widget class="QPushButton" name="pushButton_12">
+          <widget class="QPushButton" name="pushButton_carmichael">
            <property name="text">
             <string>Функція Кармайкла</string>
            </property>
