--- a/GeneralAlgebraTeamLabProject/GUI/finitefieldwindow.ui
+++ b/GeneralAlgebraTeamLabProject/GUI/finitefieldwindow.ui
@@ -95,22 +95,20 @@
          <property name="leftMargin">
           <number>0</number>
          </property>
-         <item row="7" column="0">
-          <widget class="QPushButton" name="pushButton_elementOrder">
+         <item row="12" column="0">
+          <widget class="QPushButton" name="pushButton_is_prime">
            <property name="text">
-            <string> Порядок елемента групи</string>
+            <string>Чи є простим (ймовірнісна перевірка - тест Міллера-Рабіна) 
+ (кількість ітерацій у другому полі)</string>
            </property>
           </widget>
          </item>
-         <item row="2" column="1">
-          <widget class="QPushButton" name="pushButton_add">
+         <item row="9" column="0">
+          <widget class="QPushButton" name="pushButton_is_generator">
            <property name="text">
-            <string>Додати</string>
+            <string>Чи є елемент генератором мультиплікативної групи поля</string>
            </property>
           </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QLineEdit" name="lineEdit_second"/>
          </item>
          <item row="2" column="0">
           <widget class="QPushButton" name="pushButton_reverse">
@@ -119,10 +117,38 @@
            </property>
           </widget>
          </item>
+         <item row="4" column="1">
+          <widget class="QPushButton" name="pushButton_multiply">
+           <property name="text">
+            <string>Помножити</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="1">
+          <widget class="QPushButton" name="pushButton_pow">
+           <property name="text">
+            <string>Піднести у степінь</string>
+           </property>
+          </widget>
+         </item>
          <item row="3" column="1">
           <widget class="QPushButton" name="pushButton_substract">
            <property name="text">
             <string>Відняти</string>
+           </property>
+          </widget>
+         </item>
+         <item row="10" column="0">
+          <widget class="QPushButton" name="pushButton_euler">
+           <property name="text">
+            <string>Функція Ейлера</string>
+           </property>
+          </widget>
+         </item>
+         <item row="8" column="0">
+          <widget class="QPushButton" name="pushButton_elementOrder">
+           <property name="text">
+            <string> Порядок елемента групи</string>
            </property>
           </widget>
          </item>
@@ -136,39 +162,20 @@
            </property>
           </widget>
          </item>
-         <item row="9" column="0">
-          <widget class="QPushButton" name="pushButton_euler">
+         <item row="1" column="1">
+          <widget class="QLineEdit" name="lineEdit_second"/>
+         </item>
+         <item row="5" column="0">
+          <widget class="QPushButton" name="pushButton_sqrt">
            <property name="text">
-            <string>Функція Ейлера</string>
+            <string>Квадратний корінь</string>
            </property>
           </widget>
          </item>
-         <item row="11" column="0">
-          <widget class="QPushButton" name="pushButton_is_prime">
+         <item row="2" column="1">
+          <widget class="QPushButton" name="pushButton_add">
            <property name="text">
-            <string>Чи є простим (ймовірнісна перевірка - тест Міллера-Рабіна) 
- (кількість ітерацій у другому полі)</string>
-           </property>
-          </widget>
-         </item>
-         <item row="8" column="0">
-          <widget class="QPushButton" name="pushButton_is_generator">
-           <property name="text">
-            <string>Чи є елемент генератором мультиплікативної групи поля</string>
-           </property>
-          </widget>
-         </item>
-         <item row="6" column="0">
-          <widget class="QPushButton" name="pushButton_discreteLogarithm">
-           <property name="text">
-            <string>Дискретний логарифм (друге поле - основа)</string>
-           </property>
-          </widget>
-         </item>
-         <item row="10" column="0">
-          <widget class="QPushButton" name="pushButton_carmichael">
-           <property name="text">
-            <string>Функція Кармайкла</string>
+            <string>Додати</string>
            </property>
           </widget>
          </item>
@@ -179,10 +186,10 @@
            </property>
           </widget>
          </item>
-         <item row="5" column="0">
-          <widget class="QPushButton" name="pushButton_sqrt">
+         <item row="6" column="0">
+          <widget class="QPushButton" name="pushButton_discreteLogarithm">
            <property name="text">
-            <string>Квадратний корінь</string>
+            <string>Дискретний логарифм 1 (друге поле - основа)</string>
            </property>
           </widget>
          </item>
@@ -193,17 +200,17 @@
            </property>
           </widget>
          </item>
-         <item row="5" column="1">
-          <widget class="QPushButton" name="pushButton_pow">
+         <item row="11" column="0">
+          <widget class="QPushButton" name="pushButton_carmichael">
            <property name="text">
-            <string>Піднести у степінь</string>
+            <string>Функція Кармайкла</string>
            </property>
           </widget>
          </item>
-         <item row="4" column="1">
-          <widget class="QPushButton" name="pushButton_multiply">
+         <item row="7" column="0">
+          <widget class="QPushButton" name="pushButton_discreteLogarithm2">
            <property name="text">
-            <string>Помножити</string>
+            <string>Дискретний логарифм 2 (друге поле - основа)</string>
            </property>
           </widget>
          </item>
