--- a/GeneralAlgebraTeamLabProject/GUI/polynomialfieldwindow.ui
+++ b/GeneralAlgebraTeamLabProject/GUI/polynomialfieldwindow.ui
@@ -90,31 +90,10 @@
        <property name="leftMargin">
         <number>0</number>
        </property>
-       <item row="6" column="0">
-        <widget class="QPushButton" name="pushButton">
-         <property name="text">
-          <string>Знайти обернений</string>
-         </property>
-        </widget>
-       </item>
        <item row="3" column="1">
         <widget class="QPushButton" name="pushButton_subtract">
          <property name="text">
           <string>Відняти</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="0">
-        <widget class="QPushButton" name="pushButton_gcd">
-         <property name="text">
-          <string>Чи є незвідним</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="0">
-        <widget class="QPushButton" name="pushButton_divide">
-         <property name="text">
-          <string>Нормувати</string>
          </property>
         </widget>
        </item>
@@ -123,13 +102,6 @@
        </item>
        <item row="1" column="1">
         <widget class="QLineEdit" name="lineEdit_second"/>
-       </item>
-       <item row="3" column="0">
-        <widget class="QPushButton" name="pushButton_CyclotomicPolynomial">
-         <property name="text">
-          <string>Круговий многочлен заданного порядку</string>
-         </property>
-        </widget>
        </item>
        <item row="8" column="0">
         <widget class="QPushButton" name="pushButton_3">
@@ -167,9 +139,30 @@
         </widget>
        </item>
        <item row="2" column="0">
-        <widget class="QPushButton" name="pushButton_derivative">
+        <widget class="QPushButton" name="pushButton_CyclFact">
          <property name="text">
           <string>Розклад кругового многочлена на незвідні</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QPushButton" name="pushButton_divide">
+         <property name="text">
+          <string>Нормувати</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0">
+        <widget class="QPushButton" name="pushButton_is_irreducible">
+         <property name="text">
+          <string>Чи є незвідним</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0">
+        <widget class="QPushButton" name="pushButton">
+         <property name="text">
+          <string>Знайти обернений</string>
          </property>
         </widget>
        </item>
