--- a/GeneralAlgebraTeamLabProject/GUI/polynomialfieldwindow.ui
+++ b/GeneralAlgebraTeamLabProject/GUI/polynomialfieldwindow.ui
@@ -146,7 +146,7 @@
         </widget>
        </item>
        <item row="3" column="0">
-        <widget class="QPushButton" name="pushButton_divide">
+        <widget class="QPushButton" name="pushButton_reduce">
          <property name="text">
           <string>Нормувати</string>
          </property>
